# yuzu

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/mikan/: Cargo.toml  README.md
crates/mikan-wasm/: Cargo.toml  README.md
crates/mikan-wasm/js/: opfs-cache.js
crates/mikan-wasm/src/: lib.rs
crates/mikan/src/: builder.rs  engine.rs  error.rs  excerpt.rs  lib.rs  shard.rs  tokenizer.rs  varint.rs
crates/mikan/src/snapshots/: mikan__tokenizer__tests__tokenize_golden.snap
crates/tankan/: Cargo.toml  README.md
crates/tankan/src/: error.rs  kind.rs  lib.rs  options.rs
crates/tankan/src/class/: layout.rs  mod.rs  model.rs  parser.rs  render.rs
crates/tankan/src/common/: date.rs  geom.rs  layered.rs  mod.rs  path.rs  style.rs  svg.rs  text.rs
crates/tankan/src/er/: layout.rs  mod.rs  model.rs  parser.rs  render.rs
crates/tankan/src/flowchart/: layout.rs  mod.rs  model.rs  parser.rs  render.rs
crates/tankan/src/gantt/: layout.rs  mod.rs  model.rs  parser.rs  render.rs
crates/tankan/src/mindmap/: layout.rs  mod.rs  model.rs  parser.rs  render.rs
crates/tankan/src/pie/: mod.rs  model.rs  parser.rs  render.rs
crates/tankan/src/sequence/: layout.rs  mod.rs  model.rs  parser.rs  render.rs
crates/tankan/src/state/: mod.rs  parser.rs
crates/tankan/src/timeline/: layout.rs  mod.rs  model.rs  parser.rs  render.rs
crates/tankan/tests/: corpus_test.rs
crates/tankan/tests/corpus/class/: 01-basic.mmd  02-visibility.mmd  03-generics-annotations.mmd  04-relations.mmd  05-labels-cardinality.mmd  06-direction.mmd  07-empty-and-standalone.mmd  08-japanese.mmd  09-classdef.mmd  10-cssclass.mmd
crates/tankan/tests/corpus/er/: 03-keys-comments.mmd  05-cardinalities.mmd  06-standalone-direction.mmd  07-japanese.mmd  08-style.mmd  09-classdef.mmd
crates/tankan/tests/corpus/fallback/: class.mmd  er-style.mmd  flowchart-atshape.mmd  (+7 more)
crates/tankan/tests/snapshots/: corpus_test__svg_01-basic.snap  corpus_test__svg_06-activations.snap  corpus_test__svg_07-notes.snap  corpus_test__svg_09-alt-opt.snap  corpus_test__svg_13-autonumber.snap  corpus_test__svg_15-japanese.snap  corpus_test__svg_class_01-basic.snap  corpus_test__svg_class_04-relations.snap  corpus_test__svg_class_08-japanese.snap  corpus_test__svg_class_09-classdef.snap  corpus_test__svg_class_10-cssclass.snap  corpus_test__svg_er_01-basic.snap  corpus_test__svg_er_03-keys-comments.snap  corpus_test__svg_er_07-japanese.snap  corpus_test__svg_er_08-style.snap  corpus_test__svg_er_09-classdef.snap  corpus_test__svg_flowchart_01-basic.snap  corpus_test__svg_flowchart_02-lr.snap  corpus_test__svg_flowchart_03-shapes.snap  corpus_test__svg_flowchart_05-edge-labels.snap  corpus_test__svg_flowchart_07-subgraph.snap  corpus_test__svg_flowchart_14-japanese.snap  corpus_test__svg_flowchart_15-classdef.snap  corpus_test__svg_flowchart_16-style.snap  corpus_test__svg_flowchart_17-class-default.snap  corpus_test__svg_gantt_01-basic.snap  corpus_test__svg_gantt_02-excludes-tags.snap  corpus_test__svg_gantt_05-japanese.snap  corpus_test__svg_mindmap_01-basic.snap  corpus_test__svg_mindmap_02-shapes.snap  corpus_test__svg_mindmap_05-japanese.snap  corpus_test__svg_pie_01-basic.snap  corpus_test__svg_pie_04-japanese.snap  corpus_test__svg_sequence_05-arrows.snap  corpus_test__svg_sequence_14-title-frontmatter.snap  corpus_test__svg_state_01-basic.snap  corpus_test__svg_state_03-composite.snap  corpus_test__svg_state_08-concurrency.snap  corpus_test__svg_state_10-japanese.snap  corpus_test__svg_state_11-classdef.snap  (+5 more)
crates/yuzu-cli/: Cargo.toml
crates/yuzu-cli/scaffold/: deploy.yml  getting-started.md  gitignore  index.md  theme-readme.md  yuzu.jsonc
crates/yuzu-cli/src/: cli.rs  main.rs
crates/yuzu-cli/src/commands/: build.rs  check.rs  dev.rs  diag.rs  fmt.rs  lint.rs  llms.rs  mod.rs  new.rs  preview.rs  search.rs  stubs.rs
crates/yuzu-config/: Cargo.toml
crates/yuzu-config/src/: discover.rs  error.rs  lib.rs  resolve.rs  schema.rs
crates/yuzu-config/tests/: config_test.rs
crates/yuzu-core/: Cargo.toml
crates/yuzu-core/src/: aliases.rs  cache.rs  diagnostics.rs  error.rs  frontmatter.rs  lib.rs  linkcheck.rs  lint.rs  model.rs  nav.rs  output.rs  scan.rs  traits.rs  urlpath.rs
crates/yuzu-core/src/markdown/: fence.rs  mod.rs
crates/yuzu-core/tests/: body_snapshot.rs  check_test.rs  format_test.rs  normalize_test.rs  site_model_test.rs
crates/yuzu-core/tests/snapshots/: body_snapshot__alerts_footnotes_html.snap  body_snapshot__body_html.snap  body_snapshot__math_html.snap  format_test__formatted_md.snap  normalize_test__normalized_md.snap
crates/yuzu-index/: Cargo.toml
crates/yuzu-index-format/: Cargo.toml  README.md
crates/yuzu-index-format/assets/model/: README.md  bccwj-suw_c1.0.model.zst
crates/yuzu-index-format/src/: engine.rs  excerpt.rs  lib.rs  manifest.rs  shard.rs
crates/yuzu-index-format/src/snapshots/: yuzu_index_format__tokenizer__tests__tokenize_golden.snap
crates/yuzu-index/assets/search/: README.md  search.js  search_bg.wasm
crates/yuzu-index/src/: builder.rs  error.rs  lib.rs  query.rs
crates/yuzu-index/tests/: index_test.rs
crates/yuzu-render/: Cargo.toml
crates/yuzu-render/src/: assets.rs  context.rs  css.rs  error.rs  highlight.rs  lib.rs  llms.rs  pipeline.rs  shared.rs  templates.rs  urls.rs
crates/yuzu-render/src/apispec/: mod.rs  render.rs
crates/yuzu-render/tests/: incremental_test.rs  render_snapshot.rs
crates/yuzu-render/tests/snapshots/: render_snapshot__guide_html.snap  render_snapshot__index_html.snap  render_snapshot__llms_full_txt.snap  render_snapshot__llms_txt.snap  render_snapshot__not_found_html.snap
crates/yuzu-search-wasm/: Cargo.toml  README.md
crates/yuzu-search-wasm/js/: search-client.js
crates/yuzu-search-wasm/src/: lib.rs
crates/yuzu-server/: Cargo.toml
crates/yuzu-server/src/: error.rs  lib.rs  livereload.rs  serve.rs  watch.rs
crates/yuzu-theme/: Cargo.toml  build.rs
crates/yuzu-theme/assets/templates/: 404.jinja  base.jinja  page.jinja  redirect.jinja
crates/yuzu-theme/src/: lib.rs
(+101 files in other folders)
