[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.7.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ai-implementer/yuzu"
authors = ["ai-implementer"]

[workspace.dependencies]
# Markdown パース（凍結: comrak）。default features には cli(clap) と
# syntect-onig(C の oniguruma) が含まれるため、必ず default-features = false にする
comrak = { version = "0.53", default-features = false }
# シンタックスハイライト（凍結: syntect + fancy-regex）。default(onig) との同居を
# 避けるため default-features = false + default-fancy のみ
syntect = { version = "5.3", default-features = false, features = ["default-fancy"] }
# syntect の拡張構文セット（bat のアセット由来。TypeScript/TSX/TOML/Dockerfile 等を補完）。
# default は onig を引くため必ず default-features = false + syntect-fancy
two-face = { version = "0.5", default-features = false, features = ["syntect-fancy"] }
# テンプレート（凍結: minijinja。ランタイム解釈＝将来のテンプレ ホットリロード用）
minijinja = { version = "2.21", features = ["loader"] }
# ページ並列レンダリング（凍結: rayon。ワークスティーリングのデータ並列）
rayon = "1.11"
rust-embed = "8.11"
clap = { version = "4.6", features = ["derive"] }
# JSONC（凍結: serde + JSONC）。文字列リテラル内の "//" を壊さない構文パーサ
jsonc-parser = { version = "0.32", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
# --- 検索（Phase 3）---
# term 辞書＋タイポトレランス（Levenshtein オートマトン）。純 Rust・wasm 可
fst = { version = "0.4", features = ["levenshtein"] }
# 日本語分かち書き（点予測）。純 Rust・wasm 可。モデルは assets に vendor
vaporetto = "0.6"
vaporetto_rules = "0.6"
# モデル（.zst）の伸長。純 Rust・wasm 可
ruzstd = "0.8"
unicode-normalization = "0.1"
sha2 = "0.11"
# --- Mermaid 互換 SSR（Phase 5, tankan）---
unicode-width = "0.2"
# SVG の well-formed 検証（dev 用）
roxmltree = "0.21"
# wasm-bindgen-cli と完全同一バージョンが必須のため = でピン（scripts/build-search-wasm.sh が照合）
# 文字単位の Levenshtein DFA（日本語タイポトレランス用。fst 標準はバイト距離）
levenshtein_automata = { version = "0.2", features = ["fst_automaton"] }
wasm-bindgen = "=0.2.126"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
globset = "0.4"
# 9.0 は rc 段階のため 8.2 に固定（notify-debouncer-mini 0.7 は notify ^8.2 前提）
notify = "8.2"
notify-debouncer-mini = "0.7"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.7", features = ["fs"] }
# broadcast（ライブリロード通知）に "sync" が必須（axum の feature からは有効化されない）
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync"] }
# `yuzu dev` の dev.open（起動時にブラウザを開く）用
open = "5.3"
insta = { version = "1.48", features = ["filters"] }
tempfile = "3"
# WS 統合テスト用（axum 0.8 の内部依存と同版に合わせる）
tokio-tungstenite = "0.29"
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# 内部 crate（依存方向の凍結: cli → {server, render, index, core, config} /
# render, index → core / search-wasm → index-format）
yuzu-core = { path = "crates/yuzu-core" }
yuzu-render = { path = "crates/yuzu-render" }
yuzu-config = { path = "crates/yuzu-config" }
yuzu-theme = { path = "crates/yuzu-theme" }
yuzu-server = { path = "crates/yuzu-server" }
yuzu-index = { path = "crates/yuzu-index" }
yuzu-index-format = { path = "crates/yuzu-index-format" }
# Mermaid 互換描画（yuzu 非依存の汎用ライブラリ。依存方向は yuzu-render → tankan のみ）
tankan = { path = "crates/tankan" }

# wasm 専用プロファイル（panic="abort" 等をネイティブ release に漏らさない）
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"
