[package]
name = "mikan"
# 検索インデックスフォーマット＋BM25 クエリエンジン。yuzu-* の上位層に依存しない
# 汎用ライブラリで、monorepo のまま crates.io へ単独公開している（開発は yuzu
# ワークスペースで一体・repository は monorepo を指す）。バージョンは workspace と
# 独立で、変更時にだけ上げて publish する（手順は CLAUDE.md「リリース手順」参照）
description = "Japanese full-text search index format and BM25 query engine, shared by a native indexer and a wasm client (static files, no I/O)"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["search", "japanese", "bm25", "full-text-search", "tokenizer"]
categories = ["text-processing", "database-implementations", "wasm"]

[dependencies]
fst = { workspace = true }
levenshtein_automata = { workspace = true }
ruzstd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
unicode-normalization = { workspace = true }
vaporetto = { workspace = true }
vaporetto_rules = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[features]
# 同梱モデル（assets/model/*.model.zst）を include_bytes! で埋め込む。
# yuzu-index（ネイティブ側）だけが有効化する。wasm 側はモデルを fetch するので
# 有効化しない（wasm バイナリを肥大させないため）
builtin-model = []
