[package]
name = "tankan"
# 汎用ライブラリ（特定ツール非依存）。monorepo のまま crates.io へ公開している
# （開発はこのワークスペースで一体。repository は monorepo を指す）。
# バージョンは workspace と独立で、tankan の変更時にだけ上げて publish する
# （手順は CLAUDE.md「リリース手順」参照）
description = "Mermaid-compatible diagram text to SVG renderer in pure Rust (no I/O, wasm-ready)"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["mermaid", "diagram", "svg", "flowchart", "sequence-diagram"]
categories = ["visualization", "rendering", "parser-implementations"]

[dependencies]
thiserror = { workspace = true }
unicode-width = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
roxmltree = { workspace = true }
