[package]
name = "yuzu-cli"
description = "yuzu の CLI（bin: yuzu。new / build / dev / preview / search / llms / fmt / lint / check）"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
# crates.io へは公開しない（配布は GitHub Release のバイナリ + cargo install --git。README ロードマップ参照）
publish = false

[[bin]]
name = "yuzu"
path = "src/main.rs"

[dependencies]
yuzu-config = { workspace = true }
yuzu-core = { workspace = true }
yuzu-index = { workspace = true }
yuzu-render = { workspace = true }
yuzu-server = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
open = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
