[package]
name = "yuzu-core"
description = "yuzu のドキュメントモデルとサイトモデル構築（Markdown パーサは内部に隠蔽）"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
# crates.io へは公開しない（配布は GitHub Release のバイナリ + cargo install --git。README ロードマップ参照）
publish = false

[dependencies]
comrak = { workspace = true }
globset = { workspace = true }
serde = { workspace = true }
# インクリメンタルビルドのキャッシュ（.yuzu/cache/ の JSON とハッシュキー）用
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
