[package]
name = "yuzu-index"
description = "yuzu の検索インデクサ（dist/_search/ の生成）とネイティブ検索"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
# crates.io へは公開しない（配布は GitHub Release のバイナリ + cargo install --git。README ロードマップ参照）
publish = false

[dependencies]
yuzu-core = { workspace = true }
mikan = { workspace = true, features = ["builtin-model"] }
fst = { workspace = true }
rayon = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
