[package]
name = "yuzu-search-wasm"
description = "yuzu のクライアント検索クエリエンジン（wasm-bindgen ラッパ）"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
# rlib を併記しないと cargo test/clippy --workspace がリンクできない
crate-type = ["cdylib", "rlib"]

[dependencies]
# builtin-model は有効化しない（モデルはブラウザが fetch する。wasm を肥大させない）
yuzu-index-format = { workspace = true }
# tokenize/excerpt の返却 JSON 用（token は任意文字列なのでエスケープ必須）
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
