[package]
name = "yuzu-server"
description = "yuzu の静的サーバ（preview / dev）とファイル監視・WS ライブリロード"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
# crates.io へは公開しない（配布は GitHub Release のバイナリ + cargo install --git。README ロードマップ参照）
publish = false

[dependencies]
axum = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
futures-util = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tokio-tungstenite = { workspace = true }
