[package]
name = "yuzu-theme"
description = "yuzu のデフォルトテーマ（minijinja テンプレート＋CSS＋JS を rust-embed で同梱）"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
# crates.io へは公開しない（配布は GitHub Release のバイナリ + cargo install --git。README ロードマップ参照）
publish = false

[dependencies]
rust-embed = { workspace = true }
